// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Openapi > Optional 1`] = `
{
  "required": false,
  "schema": {
    "format": "byte",
    "type": "string",
  },
}
`;

exports[`Openapi > Required 1`] = `
{
  "required": true,
  "schema": {
    "format": "byte",
    "type": "string",
  },
}
`;

exports[`Openapi > With default value 1`] = `
{
  "required": false,
  "schema": {
    "format": "byte",
    "type": "string",
  },
}
`;

exports[`Openapi > With extra infos 1`] = `
{
  "deprecated": true,
  "description": "Hello Test",
  "required": true,
  "schema": {
    "format": "byte",
    "type": "string",
  },
}
`;
